--- a/meson.build
+++ b/meson.build
@@ -5,5 +5,4 @@ libinput = dependency('libinput')
 udev = dependency('libudev')
 libev = cc.find_library('ev', required: true)
 executable('dm', ['main.c', 'scene.c', 'input.c', 'interpolate.c', 'render.c', 'backend_drm.c'],
-           dependencies: [drm, libinput, udev, libev], c_args: ['-fsanitize=address,undefined'],
-           link_args: '-fsanitize=address,undefined')
+           dependencies: [drm, libinput, udev, libev])
