Config file and cursor
Add config file loading using inih.
Display a cursor

--- a/meson.build
+++ b/meson.build
@@ -5,5 +5,7 @@ libinput = dependency('libinput')
 udev = dependency('libudev')
 libev = cc.find_library('ev', required: true)
 m = cc.find_library('m', required: true)
-executable('dm', ['main.c', 'scene.c', 'input.c', 'interpolate.c', 'render.c', 'backend_drm.c', 'user.c'],
-           dependencies: [drm, libinput, udev, libev, m], include_directories: include_directories('stb'), c_args: [ '-D_GNU_SOURCE' ])
+executable('dm', ['main.c', 'scene.c', 'input.c', 'interpolate.c', 'render.c', 'backend_drm.c', 'user.c', 'image.c', 'inih/ini.c'],
+           dependencies: [drm, libinput, udev, libev, m],
+           include_directories: [include_directories('inih'), include_directories('stb')],
+           c_args: [ '-D_GNU_SOURCE' ])
